--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,17 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter:2.2.7.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.2.7.RELEASE'
+    implementation 'org.springframework.data:spring-data-jpa:2.2.7.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.2.7.RELEASE'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.microsoft.sqlserver:mssql-jdbc:8.4.1.jre8'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.2.7.RELEASE'
+}
+
+test {
+    useJUnit()
 }
 
 application {
